--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>電気工事士二種 勉強アプリ</title>
+  <title>電気工事士二種 勉強アプリ2</title>
   <style>
     body {
       font-family: Arial, sans-serif;
